add product func
