# src/schemes/request/add_product.go
@@ -1,0 +1,8 @@
+package request
+
+// AddProduct request scheme
+type AddProduct struct {
+	Name string
+	Count int
+	Price float64
+} // @name AddProductRequest
